# minink

./: 0  1  ChangeLog.md  LICENSE  crontab  minink.cabal  minink.html  readme.md  send.sh  setup  todo  update
lib/: Email.hs  EmailSender.hs  HtmlContent.hs  LessonDb.hs  MininkSend.hs  Subscription.hs  SubscriptionDb.hs  SubscriptionRequest.hs  Time.hs  TokenGenerator.hs  Util.hs  WebApp.hs  WebDb.hs
src-send/: Main.hs
src-web/: Main.hs
test/: SenderSpec.hs  Test.hs  WebSpec.hs
