name:                minink
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Peter Hajdu
maintainer:          peter.ferenc.hajdu@gmail.com
copyright:           Peter Hajdu
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable minink-web
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11,
                       minink
  hs-source-dirs:      src-web
  default-language:    Haskell2010

executable minink-sender
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11,
                       minink,
                       sqlite-simple,
                       datetime
  hs-source-dirs:      src-send
  default-language:    Haskell2010

library
  build-depends:       base >=4.10 && <4.11,
                       sqlite-simple
  hs-source-dirs:      lib
  exposed-modules:     Subscription
  default-language:    Haskell2010
