name:                minink
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Peter Hajdu
maintainer:          peter.ferenc.hajdu@gmail.com
copyright:           Peter Hajdu
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable minink-web
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11,
                       minink,
                       servant-server,
                       servant-blaze,
                       text,
                       wai,
                       warp,
                       sqlite-simple,
                       http-api-data,
                       blaze-html,
                       bytestring,
                       time,
                       hslogger,
                       base64-bytestring
  hs-source-dirs:      src-web
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-missing-exported-signatures
                       -Wno-implicit-prelude
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction

executable minink-sender
  main-is:             Main.hs
  build-depends:       base >=4.10 && <4.11,
                       minink,
                       sqlite-simple,
                       datetime,
                       directory,
                       mtl,
                       bytestring
  hs-source-dirs:      src-send
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-missing-exported-signatures
                       -Wno-implicit-prelude
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction

library
  build-depends:       base >=4.10 && <4.11,
                       sqlite-simple,
                       text,
                       bytestring,
                       hailgun,
                       datetime,
                       sqlite-simple,
                       servant-server,
                       servant-blaze,
                       blaze-html,
                       http-api-data,
                       directory
  hs-source-dirs:      lib
  exposed-modules:     Subscription,
                       Util,
                       WebDb,
                       EmailSender,
                       SubscriptionDb,
                       MininkSend,
                       Time,
                       Email,
                       WebApp,
                       SubscriptionRequest,
                       LessonDb
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Wno-missing-exported-signatures
                       -Wno-implicit-prelude
                       -Wno-missing-import-lists
                       -Wno-missed-specialisations
                       -Wno-all-missed-specialisations
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-local-signatures
                       -Wno-monomorphism-restriction

test-suite sender-tests
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.10 && <4.11,
                       minink,
                       hspec,
                       mtl,
                       transformers,
                       servant-client,
                       servant,
                       servant-blaze,
                       http-client,
                       warp,
                       blaze-html,
                       stm,
                       bytestring
  hs-source-dirs:      test
  default-language:    Haskell2010
  main-is:             Test.hs
